workshop03/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: codeserver
  labels:
    app: codeserver
    name: codeserver
