workshop03/volume.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: mysql-po
  namespace: codeserver
spec:
  volumes:
  - name: data-vol
    persistentVolumeClaim:
      claimName: mysql-pvc
  
  containers:
  - name: mysql-container
    image: mysql:8
    ports:
    - containerPort: 3306
    volumeMounts:
    - name: data-vol #references the volume mount as defined on top
      mountPath: /config/workspace
    resources: {}
